WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200818
StorageManager does not need to subclass RefCounted
https://bugs.webkit.org/show_bug.cgi?id=200818
Summary
StorageManager does not need to subclass RefCounted
Chris Dumez
Reported
2019-08-16 10:07:28 PDT
StorageManager does not need to subclass RefCounted. It is owned by the StorageManagerSet and is never ref'd / deref'd.
Attachments
Patch
(4.62 KB, patch)
2019-08-16 10:09 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-08-16 10:09:15 PDT
Created
attachment 376507
[details]
Patch
Geoffrey Garen
Comment 2
2019-08-16 10:27:28 PDT
Comment on
attachment 376507
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=376507&action=review
r=me
> Source/WebKit/NetworkProcess/WebStorage/StorageManagerSet.cpp:69 > + return std::make_unique<StorageManager>(WTFMove(localStorageDirectory));
Please consider using WTF::makeUnique (a new helper added yesterday).
Chris Dumez
Comment 3
2019-08-16 10:29:33 PDT
(In reply to Geoffrey Garen from
comment #2
)
> Comment on
attachment 376507
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=376507&action=review
> > r=me > > > Source/WebKit/NetworkProcess/WebStorage/StorageManagerSet.cpp:69 > > + return std::make_unique<StorageManager>(WTFMove(localStorageDirectory)); > > Please consider using WTF::makeUnique (a new helper added yesterday).
I would if it existed. The patch you're talking about does not seem to have landed.
WebKit Commit Bot
Comment 4
2019-08-16 11:22:22 PDT
Comment on
attachment 376507
[details]
Patch Clearing flags on attachment: 376507 Committed
r248780
: <
https://trac.webkit.org/changeset/248780
>
WebKit Commit Bot
Comment 5
2019-08-16 11:22:24 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-08-16 11:23:20 PDT
<
rdar://problem/54399242
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug