StorageManager does not need to subclass RefCounted https://bugs.webkit.org/show_bug.cgi?id=200818

Reviewed by Geoffrey Garen.

StorageManager does not need to subclass RefCounted. It is owned by the StorageManagerSet
and is never ref'd / deref'd.

* NetworkProcess/WebStorage/StorageManager.h:
(WebKit::StorageManager::create): Deleted.
* NetworkProcess/WebStorage/StorageManagerSet.cpp:
(WebKit::StorageManagerSet::add):
* NetworkProcess/WebStorage/StorageManagerSet.h:


Canonical link: https://commits.webkit.org/214555@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248780 268f45cc-cd09-0410-ab3c-d52691b4dbfc